# server-management

./: .gitignore  README.md  install.sh  pyproject.toml
cloudinit/: unified.yaml
cloudinit/hetzner/: hetzner-cloudinit.yaml
common/: host-metrics.sh  host-security.sh
docs/: UNIFIED_CLOUDINIT.md
examples/: unified-cloud-init-configured.yaml
legacy/: README.md
legacy/postgres/: add-db-user.sh
postgres/: add-db-user.sh  setup-pg-18.sh
scripts/: apply-docker-mtu-fix.sh
src/sm/: __init__.py  __main__.py  cli.py
src/sm/commands/: __init__.py  setup.py
src/sm/commands/docker/: __init__.py  fix_mtu.py  install.py  network_mtu.py
src/sm/commands/firewall/: __init__.py  audit.py  cleanup.py  exclusive.py  remove.py  sync.py  wizard.py
src/sm/commands/mongodb/: __init__.py  backup.py  db.py  restore.py  setup.py  user.py
src/sm/commands/observability/: __init__.py  setup.py
src/sm/commands/postgres/: __init__.py  backrest.py  backup.py  db.py  db_user.py  extension.py  migrate.py  migrate_wizard.py  optimize.py  ownership.py  pgdump.py  restore.py  setup.py  user.py  wizard.py
src/sm/commands/proxy/: __init__.py  endpoint.py  key.py
src/sm/commands/security/: __init__.py  audit.py  harden.py
src/sm/core/: __init__.py  audit.py  config.py  context.py  credentials.py  deps.py  exceptions.py  executor.py  output.py  safety.py  validation.py
src/sm/services/: __init__.py  firewall_services.py  firewall_state.py  iptables.py  migration_session.py  mongodb.py  mongodump.py  network.py  ownership.py  pgbackrest.py  pgbouncer.py  pgdump.py  postgresql.py  proxy.py  s3.py  security_audit.py  systemd.py  tuning.py
src/sm/templates/auditd/: hardening.rules.j2
src/sm/templates/fail2ban/: jail.local.j2
src/sm/templates/mongodb/: mongod.conf.j2
src/sm/templates/otel/: config.yaml.j2  systemd.service.j2
src/sm/templates/pgbackrest/: backup-script.sh.j2  cron.j2  pgbackrest.conf.j2
src/sm/templates/pgbouncer/: pgbouncer.ini.j2
src/sm/templates/postgresql/: pg_hba.conf.j2  pgbackrest.conf.j2  tuning.conf.j2
src/sm/templates/proxy/: auth.lua.j2  init.lua.j2  nginx.conf.j2
tests/: __init__.py
tests/integration/: test_optimize_command.py
tests/unit/: test_firewall_commands.py  test_firewall_services.py  test_firewall_state.py  test_iptables.py  test_tuning.py  test_validation.py
(+1 files in other folders)
