[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "server-management"
version = "1.0.0"
description = "Secure CLI for server management - PostgreSQL, security hardening, and observability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Server Management Team" }
]
keywords = ["postgresql", "server", "management", "cli", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
]

[project.scripts]
sm = "sm.cli:app"

[project.urls]
Repository = "https://github.com/your-org/server-management"

[tool.hatch.build.targets.sdist]
include = ["src/sm"]

[tool.hatch.build.targets.wheel]
packages = ["src/sm"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "S101",   # assert used (OK in tests)
    "S603",   # subprocess without shell (we handle this)
    "S607",   # partial path (we use full paths)
    "B008",   # function call in defaults (required for Typer patterns)
    "S110",   # try-except-pass (used in resource detection fallbacks)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
